syntax = "proto3";

option go_package = "github.com/easyp-tech/grpc-cource-2/pkg/api/notes/v1";

package api.notes.v1;

enum ErrorCode {
  ERROR_CODE_NONE = 0;
  ERROR_CODE_INVALID_TEXT = 1;
}

message CustomError {
  ErrorCode reason = 1;
}
